<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p4"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView

        android:id="@+id/text1"
        android:layout_width="405dp"
        android:layout_height="126dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="147dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/p3"

        android:gravity="center"
        android:text="@string/question"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/trueButton"
        android:layout_width="368dp"
        android:layout_height="78dp"

        android:layout_alignParentTop="true"


        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/p3"
        android:gravity="center"
        android:onClick="onClick2"
        android:text="@string/boolean1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/falseButton"
        android:layout_width="366dp"
        android:layout_height="78dp"


        android:layout_below="@+id/trueButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/p3"
        android:gravity="center"
        android:onClick="onClick2"
        android:text="@string/boolean2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />


</RelativeLayout>
